# python-landmarkers

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
landmarkers/hands/: hands_results.py
src/: __init__.py  base_sequence.py  inference.py  landmarker.py  landmarkers.py  landmarks.py  types.py
src/hands/: __init__.py  async_mediapipe_hand_landmarker.py  hands_results.py  sync_mediapipe_hand_landmarker.py
src/inferences/: __init__.py  inference.py
src/landmarkers/: __init__.py  landmarkers.py
src/landmarks/: __init__.py  landmarks.py
src/mappers/: coordinate_mappers.py
src/mp/: __init__.py
src/mp/hands/: __init__.py  hands_results.py  landmarkers.py  metadata.py
src/visualization/: __init__.py  draw_utils.py  viewer.py
src/visualization/layers/: __init__.py  bbox_layer.py  centroid_layer.py  layer_base.py  points_layer.py  sequence_layer.py
src/visualization/protocols/: __init__.py  bbox_protocol.py  centroid_protocol.py  points_protocol.py  sequence_protocol.py
src/visualization/visualizers/: __init__.py  landmarks_sequence_visualizer.py  landmarks_visualizer.py
tests/: __init__.py  test_inferences.py  test_landmarkers.py  test_landmarks.py
tests/hands/: test_async_mediapipe_hand_landmarker.py  test_hands_results.py  test_sync_mediapipe_hand_landmarker.py
tests/mp/: __init__.py
tests/mp/hands/: __init__.py  test_hands_results.py  test_landmarkers.py  test_metadata.py
tests/visualization/: test_draw_utils.py  test_viewer.py
tests/visualization/layers/: __init__.py  test_bbox_layer.py  test_centroid_layer.py  (+2 more)
(+3 files in other folders)
