[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmarkers"
version = "0.1.0"
dependencies = [
    "mediapipe",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

[tool.setuptools]
package-dir = {"landmarkers" = "src"}
packages = ["landmarkers"]
